// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer-react usage template a 1`] = `
"<Button
  type=\\"primary\\"
  isDark
  data={[
    { first: 'John', last: 'Doe' },
    { first: 'Jane', last: 'Doe' },
  ]}
>
  Some Text
</Button>;
"
`;

exports[`renderer-react usage template b 1`] = `
"<Button
  type=\\"primary\\"
  isDark
  icon={<Icon type=\\"add\\" />}
  handleClick={() => {
    console.log('Clicked!');
  }}
>
  Click me
</Button>;
"
`;
